--- a/notebooks/cedric_practice_dataset_generator.ipynb
+++ b/notebooks/cedric_practice_dataset_generator.ipynb
@@ -735,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f5e89e58",
+   "id": "47ef0444",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-10T09:06:56.361191Z",
@@ -780,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "a68a887f",
+   "id": "aa7ae967",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-10T09:07:00.839305Z",
@@ -810,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "c7e2bbd7",
+   "id": "b3366ce3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-10T09:06:10.297026Z",
@@ -2665,7 +2665,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "74e98121",
+   "id": "c12eaabf",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-10T12:10:54.078229Z",
@@ -2885,7 +2885,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "fe4ddb76",
+   "id": "0ff6ae57",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-10T12:10:58.267844Z",
@@ -2910,46 +2910,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "6aa1dc1a",
+   "execution_count": 80,
+   "id": "d987d080",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-10T11:43:31.956377Z",
-     "start_time": "2021-06-10T11:43:31.952630Z"
+     "end_time": "2021-06-10T15:57:47.935236Z",
+     "start_time": "2021-06-10T15:57:47.931281Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'-22.958000564575194_15.951750373840332_03_CW000_0.025373805314302444_-0.026895670220255852_1.3076690435409546'"
+       "'40.605001831054686_102.3550018310547_01_CW000_0.24751798808574677_0.2894478142261505_1.1759923696517944'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "'-25.208000564575194_15.001249694824219_04_CW000_-0.07344180345535278_0.8557981848716736_2.4399986267089844.jpg'\n",
-    "'-22.958000564575194_15.951750373840332_03_CW000_0.025373805314302444_-0.026895670220255852_1.3076690435409546'"
+    "'-22.958000564575194_15.951750373840332_03_CW000_0.025373805314302444_-0.026895670220255852_1.3076690435409546'\n",
+    "'40.80500183105469_102.6050018310547_04_CW000_0.31416749954223633_0.4041779935359955_1.3764691352844238'\n",
+    "'-24.22500076293945_14.995000457763672_03_CW0'\n",
+    "'40.605001831054686_102.3550018310547_01_CW000_0.24751798808574677_0.2894478142261505_1.1759923696517944'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "794a0694",
+   "execution_count": 84,
+   "id": "d5449acb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-10T12:01:09.269387Z",
-     "start_time": "2021-06-10T12:01:05.723081Z"
+     "end_time": "2021-06-10T15:58:35.698342Z",
+     "start_time": "2021-06-10T15:58:31.102084Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed536fd77e764d77ad85312fe1487ae3",
+       "model_id": "79f5ff7cff854fba9d7f04c9c4422ce7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2962,8 +2965,8 @@
     }
    ],
    "source": [
-    "lat = -25.208000564575194\n",
-    "long = 15.001249694824219\n",
+    "lat = 40.605001831054686\n",
+    "long = 102.3550018310547\n",
     "\n",
     "ee.Initialize()\n",
     "resolution = 512\n",
@@ -2978,7 +2981,7 @@
     "collection = ee.ImageCollection(satellite_name) \\\n",
     "                .filterBounds(roi) \\\n",
     "                .filter('HIGH_PROBA_CLOUDS_PERCENTAGE < 1') \\\n",
-    "                .filter('NODATA_PIXEL_PERCENTAGE < 1') \\\n",
+    "                .filter('NODATA_PIXEL_PERCENTAGE == 0') \\\n",
     "                .limit(1)\n",
     "\n",
     "image = collection.first()\n",
@@ -2999,7 +3002,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "6a6fac68",
+   "id": "1f8412eb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-10T11:46:03.966200Z",
@@ -3126,8 +3129,120 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 76,
+   "id": "b4c2aef9",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-10T15:53:32.840723Z",
+     "start_time": "2021-06-10T15:53:32.833373Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def train_test_geographic_split(data:pd.DataFrame) -> pd.DataFrame:\n",
+    "        wind_data = data.copy()\n",
+    "        nb_long = wind_data.longitude.unique().shape[0]\n",
+    "        nb_lat = wind_data.latitude.unique().shape[0]\n",
+    "        nb_test_long = int(nb_long*.4)\n",
+    "        nb_test_lat = int(nb_lat*.4)\n",
+    "        \n",
+    "        while nb_test_long * nb_test_lat < wind_data.shape[0]*.4:\n",
+    "            nb_test_long += 1\n",
+    "            if (nb_test_long * nb_test_lat < wind_data.shape[0]*.4):\n",
+    "                nb_test_lat += 1\n",
+    "        \n",
+    "\n",
+    "        test_lat = np.sort(wind_data.latitude.unique())[:nb_test_lat]\n",
+    "        test_long = np.sort(wind_data.longitude.unique())[:nb_test_long]\n",
+    "        wind_data.loc[:,'image_type']='dunes'\n",
+    "        wind_data.loc[:,'folder']='training'\n",
+    "        \n",
+    "        \n",
+    "        train_data = wind_data.copy()\n",
+    "        test_val_data = pd.DataFrame()\n",
+    "\n",
+    "        for vlat in test_lat:\n",
+    "            for vlong in test_long:\n",
+    "                filter_ = ((train_data.latitude == vlat) & (train_data.longitude==vlong))\n",
+    "                test_val_data=pd.concat([test_val_data, train_data[filter_]])\n",
+    "                train_data =train_data[~filter_].copy()\n",
+    "        \n",
+    "        test_val_data.loc[:,'folder']='testing' \n",
+    "        \n",
+    "        if (nb_test_long*nb_test_lat<3):\n",
+    "            print(f'Grid is too small to split: {nb_lat} x {nb_long}. Returning training and testing data only.')\n",
+    "            return pd.concat([train_data,test_val_data])\n",
+    "          \n",
+    "        test_data, val_data = train_test_split(test_val_data, test_size=0.3)   \n",
+    "        test_data.loc[:,'folder']='testing'\n",
+    "        val_data.loc[:,'folder']='validation'\n",
+    "\n",
+    "        return pd.concat([train_data,test_data,val_data])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "e9f5d239",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-10T15:53:54.467918Z",
+     "start_time": "2021-06-10T15:53:54.431308Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cedric/.pyenv/versions/marswinds/lib/python3.8/site-packages/pandas/core/indexing.py:1720: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self._setitem_single_column(loc, value, pi)\n"
+     ]
+    }
+   ],
+   "source": [
+    "fn = '../raw_data/wind/0.nc'\n",
+    "dat = prep_data(fn)\n",
+    "dat = train_test_geographic_split(dat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "73483bc6",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-10T15:54:16.538487Z",
+     "start_time": "2021-06-10T15:54:16.533485Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "training      6\n",
+       "testing       4\n",
+       "validation    2\n",
+       "Name: folder, dtype: int64"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dat.folder.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "695404d8",
+   "id": "97ad40cc",
    "metadata": {},
    "outputs": [],
    "source": []
