Changed the code to fetch 16 images per wind cell

--- a/notebooks/cedric_experimental_wind_data.ipynb
+++ b/notebooks/cedric_experimental_wind_data.ipynb
@@ -12,18 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "id": "b033ae07",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-07T15:18:24.088487Z",
-     "start_time": "2021-06-07T15:18:24.085664Z"
+     "end_time": "2021-06-11T14:59:49.818030Z",
+     "start_time": "2021-06-11T14:59:49.814540Z"
     }
    },
    "outputs": [],
    "source": [
     "import netCDF4 as nc\n",
-    "fn = '../raw_data/cedric_arabia_winds_test.nc'\n",
+    "fn = '../raw_data/wind/7.nc'\n",
     "ds = nc.Dataset(fn)"
    ]
   },
@@ -37,12 +37,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "id": "1813189c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-07T15:18:24.112922Z",
-     "start_time": "2021-06-07T15:18:24.109227Z"
+     "end_time": "2021-06-11T14:59:53.107218Z",
+     "start_time": "2021-06-11T14:59:53.102899Z"
     }
    },
    "outputs": [
@@ -50,9 +50,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'netCDF4._netCDF4.Dimension'>: name = 'longitude', size = 131\n",
-      "<class 'netCDF4._netCDF4.Dimension'>: name = 'latitude', size = 91\n",
-      "<class 'netCDF4._netCDF4.Dimension'>: name = 'time', size = 123\n"
+      "<class 'netCDF4._netCDF4.Dimension'>: name = 'longitude', size = 4\n",
+      "<class 'netCDF4._netCDF4.Dimension'>: name = 'latitude', size = 10\n",
+      "<class 'netCDF4._netCDF4.Dimension'>: name = 'expver', size = 2\n",
+      "<class 'netCDF4._netCDF4.Dimension'>: name = 'time', size = 125\n"
      ]
     }
    ],
@@ -131,12 +132,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "id": "704bcf6e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-07T15:18:24.124517Z",
-     "start_time": "2021-06-07T15:18:24.122081Z"
+     "end_time": "2021-06-11T15:01:07.186983Z",
+     "start_time": "2021-06-11T15:01:07.183898Z"
     }
    },
    "outputs": [
@@ -144,7 +145,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(123, 91, 131)\n"
+      "(125, 2, 10, 4)\n"
      ]
     }
    ],
@@ -154,18 +155,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "id": "ec0c298e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-07T15:18:24.173033Z",
-     "start_time": "2021-06-07T15:18:24.126159Z"
+     "end_time": "2021-06-11T15:01:18.923013Z",
+     "start_time": "2021-06-11T15:01:18.916778Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[[-0.7569880316033475 -0.7902418808281988 -0.8563792691529029\n",
+      "    -0.9091114309526669]\n",
+      "   [-0.7949077884031779 -0.8098683174531109 -0.7748369796282677\n",
+      "    -0.8126826744030984]\n",
+      "   [-0.8653407741778627 -0.8528983539779184 -0.8020177428031461\n",
+      "    -0.7823172441532342]\n",
+      "   ...\n",
+      "   [-0.7679492113032985 -0.8153489073030864 -0.8453440274279522\n",
+      "    -0.94192090802752]\n",
+      "   [-0.8716360463028345 -0.9176285638276288 -0.93747718652754\n",
+      "    -0.9842103243023309]\n",
+      "   [-0.8825972260027855 -0.9410321637275241 -0.9253310144275944\n",
+      "    -0.8760797678028147]]\n",
+      "\n",
+      "  [[-- -- -- --]\n",
+      "   [-- -- -- --]\n",
+      "   [-- -- -- --]\n",
+      "   ...\n",
+      "   [-- -- -- --]\n",
+      "   [-- -- -- --]\n",
+      "   [-- -- -- --]]]\n",
+      "\n",
+      "\n",
+      " [[[-0.4742192201546127 -0.49495658715451996 -0.5487256173042794\n",
+      "    -0.5919778399040858]\n",
+      "   [-0.5521324704542641 -0.5517621603292657 -0.5136202174544364\n",
+      "    -0.5427265932793062]\n",
+      "   [-0.6615961434037744 -0.6230838904039466 -0.5626492780042172\n",
+      "    -0.5304322971293612]\n",
+      "   ...\n",
+      "   [-0.7388428354784287 -0.7424718747034125 -0.737657843078434\n",
+      "    -0.7986108896531613]\n",
+      "   [-0.8207554351280621 -0.824384474353046 -0.8117198680781026\n",
+      "    -0.8299391262280211]\n",
+      "   [-0.8289763199030254 -0.8515652375279243 -0.7997218200281564\n",
+      "    -0.7201051431535126]]\n",
+      "\n",
+      "  [[-- -- -- --]\n",
+      "   [-- -- -- --]\n",
+      "   [-- -- -- --]\n",
+      "   ...\n",
+      "   [-- -- -- --]\n",
+      "   [-- -- -- --]\n",
+      "   [-- -- -- --]]]\n",
+      "\n",
+      "\n",
+      " [[[-0.9677685547524044 -1.07604723530192 -1.2163207106512923\n",
+      "    -1.3546685733506734]\n",
+      "   [-1.0382015405270892 -1.1321121882266691 -1.1841037297764365\n",
+      "    -1.3038620242009007]\n",
+      "   [-1.1243356756017038 -1.2247637815012546 -1.262461352226086\n",
+      "    -1.289716177425964]\n",
+      "   ...\n",
+      "   [-0.9300709840275732 -1.0644935594019715 -1.1908433740514064\n",
+      "    -1.3837008871505434]\n",
+      "   [-0.9802109749523488 -1.1135226199517523 -1.2426867915511743\n",
+      "    -1.3879224225755245]\n",
+      "   [-0.9599920421274393 -1.0904893301768552 -1.2073592056263325\n",
+      "    -1.2846058977009869]]\n",
+      "\n",
+      "  [[-- -- -- --]\n",
+      "   [-- -- -- --]\n",
+      "   [-- -- -- --]\n",
+      "   ...\n",
+      "   [-- -- -- --]\n",
+      "   [-- -- -- --]\n",
+      "   [-- -- -- --]]]\n",
+      "\n",
+      "\n",
+      " ...\n",
+      "\n",
+      "\n",
+      " [[[-1.3966617415254854 -1.456207609625219 -1.567300647124722\n",
+      "    -1.685059266874195]\n",
+      "   [-1.4587997805002073 -1.5022001271500132 -1.5166422220249487\n",
+      "    -1.6192181266494896]\n",
+      "   [-1.542489868749833 -1.585149595149642 -1.588334262224628\n",
+      "    -1.6181071962744946]\n",
+      "   ...\n",
+      "   [-1.3614082176256432 -1.4811665120501072 -1.5890748824746246\n",
+      "    -1.7477157400239145]\n",
+      "   [-1.4538376248252296 -1.563449421824739 -1.6631369074742932\n",
+      "    -1.7703787196738132]\n",
+      "   [-1.4674650374251685 -1.5639678559997368 -1.63032743039944\n",
+      "    -1.6501019910743513]]\n",
+      "\n",
+      "  [[-- -- -- --]\n",
+      "   [-- -- -- --]\n",
+      "   [-- -- -- --]\n",
+      "   ...\n",
+      "   [-- -- -- --]\n",
+      "   [-- -- -- --]\n",
+      "   [-- -- -- --]]]\n",
+      "\n",
+      "\n",
+      " [[[-- -- -- --]\n",
+      "   [-- -- -- --]\n",
+      "   [-- -- -- --]\n",
+      "   ...\n",
+      "   [-- -- -- --]\n",
+      "   [-- -- -- --]\n",
+      "   [-- -- -- --]]\n",
+      "\n",
+      "  [[-0.5930887702790808 -0.7297332064034695 -0.9177026258526284\n",
+      "    -1.1273722186266903]\n",
+      "   [-0.6337488220038989 -0.7625426834783227 -0.8758575817278157\n",
+      "    -1.068418846726954]\n",
+      "   [-0.7092920875035609 -0.8481583843779397 -0.9457721333275029\n",
+      "    -1.0319803304271171]\n",
+      "   ...\n",
+      "   [-0.6138261372789882 -0.7666901568783041 -0.9223685334276076\n",
+      "    -1.1409996312266293]\n",
+      "   [-0.6753716800537127 -0.8157932794530844 -0.9713975939773882\n",
+      "    -1.1476652134765994]\n",
+      "   [-0.6682617256537445 -0.7998699440781557 -0.9382178067775366\n",
+      "    -1.04249713797707]]]\n",
+      "\n",
+      "\n",
+      " [[[-- -- -- --]\n",
+      "   [-- -- -- --]\n",
+      "   [-- -- -- --]\n",
+      "   ...\n",
+      "   [-- -- -- --]\n",
+      "   [-- -- -- --]\n",
+      "   [-- -- -- --]]\n",
+      "\n",
+      "  [[-1.4449501818252695 -1.5290105801998932 -1.6483245024743594\n",
+      "    -1.7857836208737443]\n",
+      "   [-1.4054010604754463 -1.4813146361001066 -1.5378980231998534\n",
+      "    -1.6616556669742997]\n",
+      "   [-1.3942176947004963 -1.495534544900043 -1.5496738851748009\n",
+      "    -1.6198846848744866]\n",
+      "   ...\n",
+      "   [-1.1029317503767997 -1.3007514191509144 -1.5007929486750196\n",
+      "    -1.7414945299239424]\n",
+      "   [-1.1455174147516092 -1.3300059190257836 -1.5290105801998932\n",
+      "    -1.7329033350239809]\n",
+      "   [-1.186177466476427 -1.30845386975088 -1.4864249158250837\n",
+      "    -1.6547678986493306]]]]\n"
+     ]
+    }
+   ],
    "source": [
     "v10 = ds['v10'][:]\n",
-    "u10 = ds['u10'][:]"
+    "u10 = ds['u10'][:]\n",
+    "print(v10)"
    ]
   },
   {
