--- a/notebooks/cedric_practice_dataset_generator.ipynb
+++ b/notebooks/cedric_practice_dataset_generator.ipynb
@@ -14,12 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ccaf4aaa-0a55-4a6c-a73a-42670b0feaaf",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-10T07:42:34.623440Z",
-     "start_time": "2021-06-10T07:42:32.133113Z"
+     "end_time": "2021-06-11T10:24:35.819732Z",
+     "start_time": "2021-06-11T10:24:34.310662Z"
     },
     "execution": {
      "iopub.execute_input": "2021-06-09T15:50:38.040367Z",
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bb401b0",
+   "id": "ff245094",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-10T09:06:56.361191Z",
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "243bc6f1",
+   "id": "825be64c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-10T09:07:00.839305Z",
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "435fc163",
+   "id": "c7250da2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-10T09:06:10.297026Z",
@@ -782,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc1b5b97",
+   "id": "f498ac74",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-10T12:10:54.078229Z",
@@ -798,7 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78210980",
+   "id": "6a82e476",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-10T12:10:58.267844Z",
@@ -813,7 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "489a3c06",
+   "id": "c44549ab",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-10T15:57:47.935236Z",
@@ -832,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "723e76b2",
+   "id": "bf315777",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-11T04:15:53.845800Z",
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "186bad98",
+   "id": "ce16b27c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-11T04:24:07.612274Z",
@@ -930,7 +930,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99aa37ca",
+   "id": "7f35b6a6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-11T04:37:16.271383Z",
@@ -946,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "907ff197",
+   "id": "0d4b3f72",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-11T04:50:56.461897Z",
@@ -971,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd97de02",
+   "id": "fc0ce9a2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-10T17:38:05.919896Z",
@@ -1024,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75d90d77",
+   "id": "e600bf3b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-10T17:44:27.336559Z",
@@ -1041,7 +1041,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ef02418",
+   "id": "2ea15134",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-10T17:44:31.550965Z",
@@ -1056,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba1a7bed",
+   "id": "26aa57bb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-10T17:44:53.362413Z",
@@ -1071,7 +1071,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57732b20",
+   "id": "b69b01d1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-10T17:39:18.976234Z",
@@ -1086,7 +1086,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf03ca24",
+   "id": "ba4af726",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-10T17:49:57.377716Z",
@@ -1102,7 +1102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7676d877",
+   "id": "dc9831d7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-10T17:53:32.212393Z",
@@ -1120,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df6c23f4",
+   "id": "879ac213",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-10T18:06:00.027545Z",
@@ -1141,7 +1141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c74eaf62",
+   "id": "5cbfd1f7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-10T18:06:03.039664Z",
@@ -1156,23 +1156,278 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "182d586f",
+   "execution_count": 8,
+   "id": "217840a7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-11T09:47:57.574911Z",
-     "start_time": "2021-06-11T09:47:57.540147Z"
+     "end_time": "2021-06-11T10:25:21.614687Z",
+     "start_time": "2021-06-11T10:25:21.590850Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>image_latitude</th>\n",
+       "      <th>image_longitude</th>\n",
+       "      <th>satellite</th>\n",
+       "      <th>image_type</th>\n",
+       "      <th>pixel_resolution</th>\n",
+       "      <th>file_name</th>\n",
+       "      <th>SENTINEL_available</th>\n",
+       "      <th>SENTINEL_complete</th>\n",
+       "      <th>LANDSAT_available</th>\n",
+       "      <th>LANDSAT_complete</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11-Jun-2021-11:25:18.284819</td>\n",
+       "      <td>20.179</td>\n",
+       "      <td>17.973875</td>\n",
+       "      <td>Landsat-8</td>\n",
+       "      <td>no_dunes</td>\n",
+       "      <td>30m</td>\n",
+       "      <td>../raw_data/images/training/no_dunes/20.179000...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11-Jun-2021-11:25:13.271669</td>\n",
+       "      <td>20.229</td>\n",
+       "      <td>17.973875</td>\n",
+       "      <td>Landsat-8</td>\n",
+       "      <td>no_dunes</td>\n",
+       "      <td>30m</td>\n",
+       "      <td>../raw_data/images/training/no_dunes/20.229000...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11-Jun-2021-11:25:08.828223</td>\n",
+       "      <td>20.229</td>\n",
+       "      <td>18.023875</td>\n",
+       "      <td>Sentinel-2</td>\n",
+       "      <td>no_dunes</td>\n",
+       "      <td>10m</td>\n",
+       "      <td>../raw_data/images/training/no_dunes/20.229000...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11-Jun-2021-11:25:05.007106</td>\n",
+       "      <td>21.179</td>\n",
+       "      <td>16.773249</td>\n",
+       "      <td>Sentinel-2</td>\n",
+       "      <td>no_dunes</td>\n",
+       "      <td>10m</td>\n",
+       "      <td>../raw_data/images/training/no_dunes/21.179000...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11-Jun-2021-11:25:01.479854</td>\n",
+       "      <td>21.179</td>\n",
+       "      <td>16.723249</td>\n",
+       "      <td>Sentinel-2</td>\n",
+       "      <td>no_dunes</td>\n",
+       "      <td>10m</td>\n",
+       "      <td>../raw_data/images/training/no_dunes/21.179000...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>11-Jun-2021-11:16:45.480296</td>\n",
+       "      <td>20.479</td>\n",
+       "      <td>18.023875</td>\n",
+       "      <td>Sentinel-2</td>\n",
+       "      <td>no_dunes</td>\n",
+       "      <td>10m</td>\n",
+       "      <td>../raw_data/images/training/no_dunes/20.479000...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143</th>\n",
+       "      <td>11-Jun-2021-11:16:42.103114</td>\n",
+       "      <td>20.429</td>\n",
+       "      <td>17.773751</td>\n",
+       "      <td>Sentinel-2</td>\n",
+       "      <td>no_dunes</td>\n",
+       "      <td>10m</td>\n",
+       "      <td>../raw_data/images/training/no_dunes/20.429000...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>144</th>\n",
+       "      <td>11-Jun-2021-11:16:39.028402</td>\n",
+       "      <td>20.429</td>\n",
+       "      <td>17.723751</td>\n",
+       "      <td>Sentinel-2</td>\n",
+       "      <td>no_dunes</td>\n",
+       "      <td>10m</td>\n",
+       "      <td>../raw_data/images/training/no_dunes/20.429000...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>11-Jun-2021-11:16:35.667550</td>\n",
+       "      <td>20.479</td>\n",
+       "      <td>17.723751</td>\n",
+       "      <td>Sentinel-2</td>\n",
+       "      <td>no_dunes</td>\n",
+       "      <td>10m</td>\n",
+       "      <td>../raw_data/images/training/no_dunes/20.479000...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>11-Jun-2021-11:16:32.675922</td>\n",
+       "      <td>20.479</td>\n",
+       "      <td>17.773751</td>\n",
+       "      <td>Sentinel-2</td>\n",
+       "      <td>no_dunes</td>\n",
+       "      <td>10m</td>\n",
+       "      <td>../raw_data/images/training/no_dunes/20.479000...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>147 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            time  image_latitude  image_longitude   satellite  \\\n",
+       "0    11-Jun-2021-11:25:18.284819          20.179        17.973875   Landsat-8   \n",
+       "1    11-Jun-2021-11:25:13.271669          20.229        17.973875   Landsat-8   \n",
+       "2    11-Jun-2021-11:25:08.828223          20.229        18.023875  Sentinel-2   \n",
+       "3    11-Jun-2021-11:25:05.007106          21.179        16.773249  Sentinel-2   \n",
+       "4    11-Jun-2021-11:25:01.479854          21.179        16.723249  Sentinel-2   \n",
+       "..                           ...             ...              ...         ...   \n",
+       "142  11-Jun-2021-11:16:45.480296          20.479        18.023875  Sentinel-2   \n",
+       "143  11-Jun-2021-11:16:42.103114          20.429        17.773751  Sentinel-2   \n",
+       "144  11-Jun-2021-11:16:39.028402          20.429        17.723751  Sentinel-2   \n",
+       "145  11-Jun-2021-11:16:35.667550          20.479        17.723751  Sentinel-2   \n",
+       "146  11-Jun-2021-11:16:32.675922          20.479        17.773751  Sentinel-2   \n",
+       "\n",
+       "    image_type pixel_resolution  \\\n",
+       "0     no_dunes              30m   \n",
+       "1     no_dunes              30m   \n",
+       "2     no_dunes              10m   \n",
+       "3     no_dunes              10m   \n",
+       "4     no_dunes              10m   \n",
+       "..         ...              ...   \n",
+       "142   no_dunes              10m   \n",
+       "143   no_dunes              10m   \n",
+       "144   no_dunes              10m   \n",
+       "145   no_dunes              10m   \n",
+       "146   no_dunes              10m   \n",
+       "\n",
+       "                                             file_name  SENTINEL_available  \\\n",
+       "0    ../raw_data/images/training/no_dunes/20.179000...                True   \n",
+       "1    ../raw_data/images/training/no_dunes/20.229000...                True   \n",
+       "2    ../raw_data/images/training/no_dunes/20.229000...               False   \n",
+       "3    ../raw_data/images/training/no_dunes/21.179000...                True   \n",
+       "4    ../raw_data/images/training/no_dunes/21.179000...                True   \n",
+       "..                                                 ...                 ...   \n",
+       "142  ../raw_data/images/training/no_dunes/20.479000...               False   \n",
+       "143  ../raw_data/images/training/no_dunes/20.429000...                True   \n",
+       "144  ../raw_data/images/training/no_dunes/20.429000...                True   \n",
+       "145  ../raw_data/images/training/no_dunes/20.479000...                True   \n",
+       "146  ../raw_data/images/training/no_dunes/20.479000...                True   \n",
+       "\n",
+       "     SENTINEL_complete  LANDSAT_available  LANDSAT_complete  \n",
+       "0                False               True              True  \n",
+       "1                False               True              True  \n",
+       "2                 True               True             False  \n",
+       "3                 True              False             False  \n",
+       "4                 True              False             False  \n",
+       "..                 ...                ...               ...  \n",
+       "142               True               True             False  \n",
+       "143               True              False             False  \n",
+       "144               True              False             False  \n",
+       "145               True              False             False  \n",
+       "146               True              False             False  \n",
+       "\n",
+       "[147 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pd.read_csv('../raw_data/logs/11-Jun-2021-10-46-42.csv')"
+    "pd.read_csv('../raw_data/logs/11-Jun-2021-11-16-28.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4eae7aab",
+   "id": "fcd584f1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-11T06:54:35.023589Z",
@@ -1190,7 +1445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8d93d47",
+   "id": "5ab97b6a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-11T06:54:37.493265Z",
@@ -1205,7 +1460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b3361b8",
+   "id": "5bb66563",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-11T06:56:13.388622Z",
@@ -1230,7 +1485,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fc3bec45",
+   "id": "5e5a74fb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-11T10:06:57.426832Z",
@@ -1291,23 +1546,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "60621ca8",
+   "execution_count": 10,
+   "id": "ddda481a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-11T10:04:40.244220Z",
-     "start_time": "2021-06-11T10:04:40.241667Z"
+     "end_time": "2021-06-11T10:42:40.339211Z",
+     "start_time": "2021-06-11T10:42:40.337242Z"
     }
    },
    "outputs": [],
    "source": [
-    "fn1='21.22900047302246_16.523125076293944_01_CW000_-0.36194339394569397_-0.5703921318054199_1.3590813875198364.jpg'"
+    "fn1='../raw_data/images/training/no_dunes/21.429000473022462_17.773750686645506_04_CW000_-0.8940587043762207_-0.0577491857111454_1.2933330535888672.jpg'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ad070be1",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-11T10:42:42.654080Z",
+     "start_time": "2021-06-11T10:42:42.650046Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.exists(fn1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "90ebe7d2",
+   "id": "c9a3990a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-11T10:04:42.581679Z",
@@ -1322,7 +1603,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c80cecef",
+   "id": "710d49db",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-11T10:07:00.126221Z",
@@ -1363,7 +1644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "839a96f3",
+   "id": "1739d447",
    "metadata": {},
    "outputs": [],
    "source": []
